# env-setup

./: .gitignore  README.md
data_collection/: Makefile  README.md  pyproject.toml
data_collection/configs/: collect_gh_repos.yaml
data_collection/scripts/: collect_gh_repos.py
env_setup_utils/: README.md  pyproject.toml
env_setup_utils/env_setup_utils/: log_analyzer.py  process_trajectories_to_scripts.py  repo_downloader.py  traj2html.py
env_setup_utils/env_setup_utils/data_sources/: __init__.py  base.py  hf.py
env_setup_utils/env_setup_utils/markdown/: __init__.py  parse_md_headings.py
env_setup_utils/scripts/: full_pipeline.py  jvm.Dockerfile  python.Dockerfile
env_setup_utils/scripts/conf/: defaults.yaml  jvm-procedural.yaml  jvm.yaml  python-procedural.yaml  python.yaml
env_setup_utils/tests/markdown/: test_extract_all_headings.py  test_extract_headings_with_keywords.py
evaluation/: .gitignore  Makefile  README.md  main.py  pyproject.toml
evaluation/conf/: config.yaml
evaluation/scripts/: jvm_baseline.sh  jvm_build.sh  python_baseline.sh  python_build.sh
inference/: Makefile  README.md  pyproject.toml  run_inference.py
inference/configs/: __init__.py  agent_config.py  context_provider_config.py  data_source_config.py  docker_config.py  hf_config.py  instantiatable_config.py  run_inference_config.py  run_inference_jvm.yaml  run_inference_jvm_installamatic.yaml  run_inference_py.yaml  run_inference_py_baseline.yaml  run_inference_py_installamatic.yaml  toolkit_config.py
inference/src/: async_bash_executor.py  env_setup_runner.py
inference/src/agents/: base.py
inference/src/agents/installamatic/: agent.py  build_graph.py  prompts.py  search_graph.py  state_schema.py
inference/src/agents/jvm/: agent.py  prompts.py  state_schema.py
inference/src/agents/procedural/: agent.py  commands.py  prompts.py
inference/src/agents/python/: agent.py  prompts.py  state_schema.py
inference/src/context_providers/: build_instructions.py
inference/src/toolkits/: __init__.py  base.py  bash_terminal.py  bash_terminal_jvm.py  bash_terminal_py.py  installamatic.py
inference/src/utils/: __init__.py  installamatic.py  messages_for_tool_calls.py  messages_info.py  modify_commands.py  python_configuration.py  python_packaging.py
inference/tests/: test_modify_commands.py
