[tool.poetry]
name = "env-setup-evaluation"
version = "0.2.0"
description = ""
authors = [
    "Anonymous authors"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
hydra-core = "^1.3.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
pandas = "^2.2.2"
requests = "^2.32.3"
docker = "^7.1.0"
datasets = "^2.20.0"
huggingface-hub = "^0.24.7"
env_setup_utils = { path = "../env_setup_utils", develop = true }
gitpython = "^3.1.43"
jsonlines = "^4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
mypy = "^1.11.2"
isort = "^5.13.2"
pytest = "^8.3.3"
pyright = "^1.1.381"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
